# pacman_gameengine

./: .gitignore  CMakeLists.txt  Cargo.toml  start.py
editor/: CMakeLists.txt
ffi/: Cargo.toml
gui/: CMakeLists.txt
gui/raw/: mainwindow.ui
gui/src/: editor.cpp  editor.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  scene3d.cpp  scene3d.h  scene3drenderer.cpp  scene3drenderer.h  trianglerenderer.cpp  trianglerenderer.h
src/: main.rs
ui/: mainwindow.ui
ui_backend/: Cargo.toml
ui_backend/src/: lib.rs
ui_frontend/py/: mainwindow_impl.py  mainwindow_ui.py
ui_frontend/utils/: uiffi.py
xxffi/: CMakeLists.txt  Cargo.toml  cbindgen.toml
xxffi/src/: editor.rs  lib.rs
