[package]
name = "pacman_gameengine"
version = "0.1.0"
authors = ["Jordan Brion <jordan.brion@domintell.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.71"
serde_derive = "1.0.71"
serde_json = "1.0"