[package]
name = "xxffi"
version = "0.1.0"
authors = ["Jordan BRION <jrd.brion@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.0"