[package]
name = "xxffi"
version = "0.1.0"
authors = ["Jordan BRION <jrd.brion@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"
ash = "0.29.0"